--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,42 @@
-
+body{
+  padding: 0;
+  margin:0;
+}
+#root{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+}
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+  box-shadow: 2px 2px 5px 1px grey; 
   font-size: larger;
-  border: 1px solid grey;
+  padding: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+ 
 }
 
 .btn{
-  background-color: blueviolet;
-  padding: 5px;
+  width: 90%;
+  background-color: rgb(109, 35, 178);
+  padding: 8px;
   color: white;
   margin: 10px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px 1px grey;
+  border: none;
+}
+input{
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  padding: 10px;
+  width: 90%;
+  border: none;
+  box-shadow: 2px 2px 5px 1px grey;
 }
